# xstrp-reference

./: Cargo.toml  LICENSE  PHASE-C1-FROZEN.md  PHASE-C2-CHARTER.md  PHASE-C2-FROZEN.md  PHASE-C3-FAILURES.md  PHASE-C3-FROZEN.md  PHASE-C3-PROOFS.md  PHASE-C3-TRANSITIONS.mdmd  PHASE-C4-CHARTER.md  PHASE-C4-FROZEN.md  PHASE-C5-CHARTER.md  PHASE-C5-CLOSED.md  PHASE-C6-AUTHORIZATION.md  PHASE-C6-B-AUTHORIZED.md  PHASE-C6-B-CLOSED.md  README.md  REVIEW-OVERVIEW.md  REVIEWERS.md  SECURITY-NOTICE.md
.github/workflows/: ci.yml
docs/: USE-DEFINITION.md
formal/: INIT-STATE.md  INVARIANTS.md  PHASE-C5-RESULTS.md  STATE-VARIABLES.md  TRANSITIONS.md  VERIFICATION-SCOPE-C5.md  VERIFICATION-SCOPE.md  XSTRP.tla  XSTRP_C5.tla
phase-c6/: PHASE-C6-B-CHARTER.md  PHASE-C6-B-WALLET-CONFORMANCE.md  PHASE-C6-CHARTER-RULES.md  README.md
rfc/: RFC-XSTRP-0001.md
security/: THREAT-MODEL.md
src/: Cargo.toml  README.md  bridge.rs  execute.rs  fee.rs  intent.rs  intent_binding.rs  intent_bindings.rs  lib.rs  main.rs  proof.rs  proofs.rs  state_machine.rs  tests.rs  validate.rs  validation.rs  validation_request.rs
src/interfaces/: intent_store.rs  mod.rs
tests/: c4_compliance.rs
